--- a/es-Galaxy.html
+++ b/es-Galaxy.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <title>Peter Verastegui | Portofolio</title>
+  <title>Peter Verastegui | Portfalio</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Peter Verastegui's Portofolio">
-  <meta name="keywords" content="personal, portfolio">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
   <!-- Stylesheets -->
@@ -14,12 +16,12 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="img/favico.ico">
 
   <!-- Font icons -->
   <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
@@ -30,7 +32,6 @@
 </head>
 
 <body>
-
   <!-- Preloader -->
   <div id="preloader">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
@@ -42,13 +43,13 @@
       </path>
     </svg>
   </div>
-
   <main>
 
-    <!-- Header
+
+    <!-- HEADER
 ================================================== -->
     <header>
-      <a href="index.html" class="logo float-left"></a>
+      <a href="es.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -64,30 +65,32 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="index.html#resume">Resume</a>
+              <a href="#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact Information</a>
+              <a href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Up to top</span>
+        <span>Ir arriba</span>
         <div class="arrow"></div>
       </div>
     </div>
+
+
+
 
 
     <!-- Hero Section
@@ -122,11 +125,12 @@
       <div class="row lightbox-gallery">
 
         <div class="col-lg-4 col-md-12 col-sm-12 cl-xs-12">
-          <h2 class="title white-text">Why Agent J got the small gun?</h2>
-          <p class="white-text bottom_60">Short answer, bad user experience. Thinking as a UX person I thought Agent J
-            was not only a rookie being played. He was also at the mercy of a bad onboarding process. You see he walked
-            in that room without having filed a proper request!. So of course he was not aware of what was in store for
-            him. Lack of awareness, a very familiar problem in many places around the galaxy.</p>
+          <h2 class="title white-text">¿Por qué le tocó la pistola mas pequeña?</h2>
+          <p class="white-text bottom_60">Para resumirlo: eso fue una mala experiencia de usuario. Pensando como un
+            diseñador de experiencias dije «al agente "J" no solo le están jugando una broma, el esta siendo víctima de
+            un proceso de integración ineficiente». Si se dan cuenta el llegó a ese lugar sin haber llenado ningún
+            formulario. Por supuesto que no iba a saber lo que le esperaba. Falta de conciencia sobre los procesos
+            dentro de la empresa, un problema muy común en nuestra galaxia.</p>
         </div>
 
         <div class="col-lg-8 col-md-12 col-sm-12 cl-xs-12 image">
@@ -138,17 +142,17 @@
 
     <section data-midnight="dark" class="galaxy-bg-purple-gradient">
       <div class="container project-detail">
-        <h2 class="title white-text text-center bottom_120">How would one fix the MIB’s user experience?</h2>
+        <h2 class="title white-text text-center bottom_120">¿Como mejorar la experiencia del agente "J"?</h2>
         <div class="row lightbox-gallery top_120">
           <div class="image col-lg-4 col-md-12 col-sm-12">
-            <img class="bottom_30" src="img/works/Galaxy/ONE-1.svg" alt="Step One">
+            <img class="bottom_30" src="img/works/Galaxy/Paso-uno.svg" alt="Paso 1">
           </div>
           <div class="image col-lg-4 col-md-12 col-sm-12">
-            <img class="bottom_30" src="img/works/Galaxy/TWO.svg" alt="Step Two">
+            <img class="bottom_30" src="img/works/Galaxy/Paso-dos.svg" alt="Paso 2">
 
           </div>
           <div class="image col-lg-4 col-md-12 col-sm-12">
-            <img src="img/works/Galaxy/THREE.svg" alt="Step Three">
+            <img src="img/works/Galaxy/Paso-tres.svg" alt="Paso 3">
           </div>
 
 
@@ -165,7 +169,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <h2 class="text text-center title">Mapping a request</h2>
+            <h2 class="text text-center title">Documentando</h2>
           </div>
         </div>
       </div>
@@ -176,39 +180,40 @@
             <div class="image">
               <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
             </div>
-            <h2 class="subtitle bottom_30">Agent J</h2>
-            <p class="white-text">In the field things can get tragic pretty quickly. Some people above me would pay to
-              go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are
-              nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks
-              at a stranger's door.</p>
+            <h2 class="subtitle bottom_30">Agent "J"</h2>
+            <p class="white-text">
+              En el trabajo las cosas se puede volverse trágicas en cualquier momento. Algunos colegas pagarían lo que
+              sea por volver a sentir la adrenalina que solían sentir antes de haberse mudado a sus comodas oficinas.
+              Los autos que vuelan y las pistolas son nada en corporación a la sensación de peligro que abruma tu cuerpo
+              al tocar la puerta de un criminal y no saber que esperar.
+            </p>
             <div class="image top_30">
-              <img src="img/works/Galaxy/Users/Assignee-Workflow-1.svg" alt="Request Worflow">
+              <img src="img/works/Galaxy/Users/Asignado-Workflow-1.svg" alt="Asignado">
             </div>
           </div>
           <div class="col-lg-4">
             <div class="image">
-              <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
+              <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Supersivor">
             </div>
             <h2 class="subtitle bottom_30">Supervisor</h2>
-            <p class="project-detail">My peeps on the field are putting their life on the line, and as their supervisor
-              I feel like they have trusted me with their life, so I'll do whatever is on my power to get them, whatever
-              they need to get, safely. If they return home in once piece I did my job. If safety cost us some money so
-              be it.</p>
+            <p class="project-detail">Mis colegas ponen sus vidas en riesgo todos los días y, como su supervisor, siento
+              como si me hubieran encargado sus vidas. Por esa razón haré lo que este a mi alcance, para proveerles
+              seguridad y asistirlos en lo que necesiten. «su seguridad es esencial, sin importar lo que cueste».</p>
             <div class="image top_30">
-              <img src="img/works/Galaxy/Users/Supervisor-Workflow-2.svg" alt="Request Worflow">
+              <img src="img/works/Galaxy/Users/el-supervisor-workflow-2.svg" alt="Supervisor">
             </div>
           </div>
           <div class="col-lg-4">
             <div class="image">
-              <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
+              <img src="img/works/Galaxy/Users/CFO.svg" alt="Directora Financiera">
             </div>
-            <h2 class="subtitle bottom_30">CFO</h2>
-            <p>I am the money guy, in my eyes some people in the field think every assigment is a Michael Bey movie.
-              Everytime they go out and cost me more money than they should I got a problem. Do they think we have an
-              infinite suply of money?, if I burn the fiscal budget before the end of the year–I get in trouble not
-              them!</p>
+            <h2 class="subtitle bottom_30">Directora Financiera</h2>
+            <p>Yo estoy encargada del dinero, a mi parecer algunas personas creen que todas las misiones son una
+              película de Hollywood. Cada ves que alguien sale a trabajar y me cuesta mas dinero del necesario yo soy la
+              del problema no ellos, ¿qué creen? el dinero no crece en los arboles. El presupuesto fiscal no es
+              infinito.</p>
             <div class="image top_30">
-              <img src="img/works/Galaxy/Users/CFO-Workflow-3.svg" alt="Request Worflow">
+              <img src="img/works/Galaxy/Users/Directora-Financiera-Workflow-3.svg" alt="Request Worflow">
             </div>
           </div>
         </div>
@@ -226,7 +231,8 @@
         </div>
         <div class="row">
           <div class="col-lg-12 bottom_120">
-            <h2 class="text text-center title">Designing a request management system</h2>
+            <h2 class="text text-center title">Diseñando un sistema
+              de gestión de solicitudes</h2>
           </div>
         </div>
         <!-- Images -->
@@ -269,7 +275,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12 bottom_120">
-            <h2 class="text text-center white-text title">Providing a killer UI</h2>
+            <h2 class="text text-center white-text title">Interfaz Intuitiva</h2>
           </div>
         </div>
 
@@ -335,38 +341,39 @@
     </section>
     <section data-midnight="dark" class="project-detail galaxy-bg-to-black lightbox-gallery">
       <div class="col-lg-12">
-        <h2 class="text title white-text text-center">Colors</h2>
+        <h2 class="text title white-text text-center">Colores</h2>
       </div>
       <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
         <img src="img/works/Galaxy/Galaxy-Secondary-Colors.svg" alt="Logo">
-        <p class="text-center white-text top_15">Secondary</p>
+        <p class="text-center white-text top_15">Secundarios</p>
       </div>
       <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
         <img src="img/works/Galaxy/Galaxy-Primary-Colors.svg" alt="Logo">
-        <p class="text-center white-text top_15">Primary</p>
+        <p class="text-center white-text top_15">Primarios</p>
       </div>
     </section>
     <section data-midnight="dark" class="project-detail galaxy-bg-purple lightbox-gallery">
       <div class="col-lg-12">
-        <h2 class="text title white-text text-center">Typography</h2>
+        <h2 class="text title white-text text-center">Typografia</h2>
       </div>
       <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
         <img src="img/works/Galaxy/Ezzo-Font-Family.svg" alt="Ezzo Font Family">
-        <p class="text-center white-text top_15">Ezzo font family</p>
+        <p class="text-center white-text top_15">Ezzo, familia tipográfica.</p>
       </div>
     </section>
     <section data-midnight="white" class="project-detail lightbox-gallery">
       <div class="col-lg-12">
-        <h2 class="text title text-center">Iconography</h2>
+        <h2 class="text title text-center">Iconografia</h2>
       </div>
       <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
         <img src="img/works/Galaxy/Icons-for-Galaxy.svg" alt="Icons">
-        <p class="text-center white-text top_15">Ezzo font family</p>
+        <p class="text-center white-text top_15">Iconos</p>
       </div>
     </section>
     <section data-midnight="dark" class="lightgrey-bg galaxy-bg">
       <div class="project-detail">
-        <h2 class="white-text title text-center">UI components</h2>
+        <h2 class="white-text title text-center">
+          Componentes de la interfaz de usuario (UI)</h2>
       </div>
       <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
         <img src="img/works/Galaxy/UI-Components.svg" alt="Dark UI Components">
@@ -374,7 +381,7 @@
     </section>
     <section data-midnight="dark" class="galaxy-bg-to-black">
       <div class="project-detail">
-        <h2 class="white-text title text-center bottom_120">Looking for a villain?</h2>
+        <h2 class="white-text title text-center bottom_120">¿En busca de algún villano?</h2>
       </div>
       <!-- Images -->
       <div class="container">
@@ -402,7 +409,7 @@
         </div>
         <!-- Images -->
         <div class="top_60 project-detail col-lg-12">
-          <p class="text-center white-text">Thanks for scrolling this far...now you have to forget what you saw.</p>
+          <p class="text-center white-text">Gracias por visitar mi proyecto...ahora tienes que olvidar lo que viste.</p>
         </div>
     </section>
 
@@ -414,8 +421,8 @@
 
     <section>
       <div class="col align-self-center text-center top_30">
-        <a class="next-link" href="USA-Today.html">
-          <div class="nav-title">Next Work</div>
+        <a class="next-link" href="es-USA-Today.html">
+          <div class="nav-title">Siguiente</div>
           <div class="next-title">USA Today</div>
         </a>
       </div>
@@ -426,7 +433,7 @@
       <div class="container project-detail wow padtop_30">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
 
           <div class="col-lg-2 bottom_30">
@@ -436,10 +443,10 @@
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
