--- a/es.html
+++ b/es.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <title>Peter Verastegui | Portfolio</title>
+  <title>Peter Verastegui | Portfalio</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Peter Verastegui's Portofolio">
-  <meta name="keywords" content="personal, portfolio">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Peter Verastegui's Portfolio" />
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
   <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
@@ -49,7 +49,7 @@
     <!-- HEADER
 ================================================== -->
     <header>
-      <a href="index.html" class="logo float-left"></a>
+      <a href="es.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -65,16 +65,16 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="#portfolio">Portfolio</a>
+              <a href="#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
-              <a href="#about">About</a>
+              <a href="#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="#resume">Resume</a>
+              <a href="#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="#contact">Contact Information</a>
+              <a href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -84,7 +84,7 @@
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Up to top</span>
+        <span>Ir arriba</span>
         <div class="arrow"></div>
       </div>
     </div>
@@ -106,12 +106,12 @@
         </div>
         <div class="col-lg-4">
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Galaxy.html">
+            <a href="es-Galaxy.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb-2.png" alt="">
             </a>
           </div>
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Library-of-Congress.html">
+            <a href="es-Library-of-Congress.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-7/LOC-Cover-IMG.png"
                 alt="Library of Congress">
             </a>
@@ -124,21 +124,21 @@
 
         <div class="col-lg-4">
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="USA-Today.html">
+            <a href="es-USA-Today.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
                 alt="USA Today Brand Refresh">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Gallo-Guapo.html">
+            <a href="es-Gallo-Guapo.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-5/Gallo-Guapo-Thumb-Nail-2.png"
                 alt="">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Biodiversity-Festival.html">
+            <a href="es-Biodiversity-Festival.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
                 alt="Bat Flying Animation">
             </a>
@@ -152,21 +152,21 @@
         <div class="col-lg-4">
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Creating-Change.html">
+            <a href="es-Creating-Change.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-8/Creating-Change-2.png"
                 alt="Creating Change">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="UI-UX-Illustrations.html">
+            <a href="es-UI-UX-Illustrations.html">
               <img class="round-corners bottom_60 plus-cursor"
                 src="img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Storytelling-Bootcamp.html">
+            <a href="es-Storytelling-Bootcamp.html">
               <img class="round-corners bottom_60 plus-cursor"
                 src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
             </a>
@@ -180,7 +180,7 @@
 
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Racing-Extinction.html">
+            <a href="es-Racing-Extinction.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
                 alt="">
             </a>
@@ -211,16 +211,16 @@
       <div class="row lightbox-gallery">
 
         <div class="col-lg-4">
-          <h2 class="white-text subtitle bottom_30">About</h2>
+          <h2 class="white-text subtitle bottom_30">Acerca de mi</h2>
         </div>
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_60">Hello, my name is Peter. I am Interaction designer that started his career as a curious
-            student in art school. That curiosity took me from Graphics to Motion to Interaction. Now, in hindsight,
-            I've realized that no matter what hat I wore I found myself crafting experiences–and stories in one way or
-            another. To learn more about that journey check out my <a href="https://peterverastegui.wordpress.com/"
-              rel="noopener noreferrer" target="_blank">blog</a>
+          <p class="padtop_60">Hola, soy Peter. un diseñador que empezó su carrera como un estudiante de arte realmente
+            curioso. Aquella curiosidad me llevo del diseño gráfico a la animación digital y de la animación al UX/UI.
+            Hoy en día me doy cuenta que, sin importar el trabajo que tomo, siempre estoy diseñado experiencias y
+            contando historias de una u otra manera. Para aprender mas acerca de mi visita mi <a
+              href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank">blog</a>
             </li>
             &nbsp;<a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
                 class="fas fa-external-link-square-alt" aria-hidden="true"></i> </a></p>
@@ -236,11 +236,11 @@
       <div class="row lightbox-gallery">
 
         <div class="col-lg-4 col-md-12 col-sm-12">
-          <h2 class="white-text subtitle">Resume</h2>
+          <h2 class="white-text subtitle">Currículum Vitae</h2>
         </div>
 
         <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
-          <h3 class="grey-text">Experience</h3>
+          <h3 class="grey-text">Experiencia Laboral</h3>
         </div>
       </div>
 
@@ -255,7 +255,7 @@
 
 
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30">Interaction Designer,<br> Feb 2019 – Present,<br> Rockville, MD</p>
+          <p class="padbot_30">UX Designer,<br> Feb 2019 – Presente,<br> Maryland, EE. UU.</p>
 
 
         </div>
@@ -263,7 +263,7 @@
 
 
           <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30">Interaction Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC</p>
+          <p class="padbot_30">UX Designer,<br> Ene. 2018 – Feb 2019,<br> Washington, D. C., EE. UU.</p>
 
 
         </div>
@@ -271,7 +271,7 @@
 
 
           <h3 class="white-text bottom_15">PBS NewsHour</h3>
-          <p class="padbot_30">Motion Designer,<br> Nov 2017 – Jan 2018,<br> Arlington, VA</p>
+          <p class="padbot_30">Animador Digital,<br> Nov. 2017 – Ene. 2018,<br> Virginia, EE. UU.</p>
 
 
         </div>
@@ -290,7 +290,7 @@
 
 
           <h3 class="white-text bottom_15">USA Today</h3>
-          <p class="padbot_30">Graphic Designer,<br> Apr 2017 – Jul 2017,<br> Mclean, VA</p>
+          <p class="padbot_30">Diseñador Grafico,<br> Abr. 2017 – Jul. 2017,<br> Virginia, EE. UU.</p>
 
 
         </div>
@@ -298,15 +298,15 @@
 
 
           <h3 class="white-text bottom_15">National Geographic</h3>
-          <p class="padbot_30">Graphic Designer,<br> Apr 2016 – Apr 2017,<br> Washington, DC</p>
+          <p class="padbot_30">Diseñador Grafico,<br> Abr. 2016 – Abr. 2017,<br> Washington, D. C., EE. UU.</p>
 
 
         </div>
         <div class="col-lg-2">
 
 
-          <h3 class="white-text bottom_15">Discovery</h3>
-          <p class="padbot_30">Graphic Designer,<br> Jan 2015 – Jan 2016,<br> Silver Spring, MD</p>
+          <h3 class="white-text bottom_15">Discovery Inc.</h3>
+          <p class="padbot_30">Diseñador Grafico,<br> Ene. 2015 - Ene. 2016,<br> Maryland, EE. UU.</p>
 
 
         </div>
@@ -321,7 +321,7 @@
         </div>
 
         <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
-          <h3 class="grey-text">Education</h3>
+          <h3 class="grey-text">Educación</h3>
         </div>
       </div>
 
@@ -336,11 +336,28 @@
 
 
           <h3 class="white-text bottom_15">Corcoran College of Art + Design</h3>
-          <p>Bachelor of Fine Art & Graphic Design<br> 2010 - 2014</p>
+          <p>Bachiller de Bellas Artes, licenciatura en diseño gráfico, <br> Washington, D. C., EE. UU.<br> Clase
+            del 2014</p>
 
 
         </div>
 
+
+      </div>
+
+      <div class="row lightbox-gallery top_60">
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-8">
+          <a href="/es/CV_Peter Verastegui_Septiembre_(2020).pdf" download>
+            <button class="site-btn" data-tilt> Descargar CV
+              <i class="icon ion-md-arrow-down"></i>
+            </button>
+          </a>
+
+        </div>
 
       </div>
 
@@ -353,7 +370,7 @@
         <div class="row lightbox-gallery">
 
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contac Information</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
 
           <div class="col-lg-2 bottom_30">
@@ -363,10 +380,10 @@
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
