--- a/index.html
+++ b/index.html
@@ -379,10 +379,10 @@
             <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble"
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
